--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@babel/preset-react": "^7.26.3",
         "axios": "^0.21",
-        "laravel-mix": "^6.0.6",
+        "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14"
+    },
+    "dependencies": {
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0"
     }
 }
